# umdd

./: .dockerignore  .gitignore  Makefile  README.md  data-request.txt  pyproject.toml
.github/workflows/: ci.yml  eval.yml
data/copybooks/: mq_sample.cpy  sample.cpy  smf_sample.cpy
docker/: Dockerfile.runtime  Dockerfile.test
docs/: eval.md  manifest.md  manifest_report.html  manifest_sample.json  plan.md  runlog.md  stack.md  training.md  ui_user_guide.md
notebooks/: umdd_playground.ipynb
scripts/: benchmark.py  decode_manifest.py  view_eval_logs.py
src/umdd/: __init__.py  cli.py  decoder.py  heuristic_tags.py  inference.py  manifest.py  model.py
src/umdd/copybook/: parser.py  synth.py
src/umdd/data/: __init__.py  generator.py  loader.py
src/umdd/eval/: __init__.py  harness.py  report.py  summarize.py
src/umdd/training/: __init__.py  boundary.py  codepage.py  fieldtyping.py  multitask.py
tests/: test_copybook_overpunch.py  test_copybook_parser.py  test_copybook_synth.py  test_decoder.py  test_eval.py  test_eval_report.py  test_generator.py  test_heuristic_tags.py  test_inference_outputs.py  test_loader.py  test_manifest.py  test_multitask.py  test_training_codepage.py
ui/: app.py
