[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umdd"
version = "0.0.1"
description = "Universal Mainframe Data Decoder"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "UMDD Authors" }]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "orjson>=3.9.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
]

[project.scripts]
umdd = "umdd.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E266", "B008"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
